URL df generator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(parse_xml_extras)
 export(plot_hc_trelliscope)
 export(plot_trelliscopes)
 export(plot_wc_trelliscope)
+export(v2_api_url_df)
 export(visualize_gkg_trelliscope)
 export(visualize_gkg_tv_trelliscope)
 export(visualize_vgkg_trelliscope)
