Social link API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(date_columns_to_numeric)
 export(dictionary_country_domains)
 export(dictionary_gdelt_tv_stations)
 export(dictionary_outlets)
+export(dictionary_social_links)
 export(filter_sources)
+export(gdelt_social_data)
 export(generate_dates)
 export(generate_geo_query)
 export(generate_trelliscope_bundle)
