--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: gdeltr2
 Type: Package
 Title: R's modern interface GDELT Project Interface
 Year: 2019
-Version: 0.3.1175
+Version: 0.3.118
 Authors@R: person("Alex", "Bresler", email = "abreselr@asbcllc.com", role = c("aut", "cre"))
 URL: https://github.com/abresler/gdeltr2
 Description: A tool to efficently and interactively interface with GDELT data and
     and APIs.
 Depends:
-    R (>= 3.2.0)
+    R (>= 3.4.0)
 License: MIT + file LICENSE
 LazyData: TRUE
 Imports:
@@ -39,5 +39,7 @@ Imports:
     tibble,
     RColorBrewer,
     devtools,
-    hrbrthemes
+    hrbrthemes,
+    memoise,
+    data.table
 RoxygenNote: 6.1.1
