--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,21 @@
 export(.plot_ft_v2_highchart)
 export(date_columns_to_numeric)
 export(dictionary_country_domains)
+export(dictionary_ft_codebook)
 export(dictionary_gdelt_tv_stations)
+export(dictionary_geo_codebook)
+export(dictionary_gkg_tv_daily_summaries)
 export(dictionary_outlets)
 export(dictionary_social_links)
+export(dictionary_stability_locations)
+export(dictionary_v3_entity_urls)
 export(filter_sources)
-export(gdelt_social_data)
+export(ft_geo_query)
+export(ft_terms_sentiment)
+export(ft_trending_terms)
+export(ft_urls_sentiment)
+export(ft_v2_api)
 export(generate_dates)
-export(generate_geo_query)
 export(generate_trelliscope_bundle)
 export(get_codes_cameo_country)
 export(get_codes_cameo_ethnic)
@@ -19,29 +27,20 @@ export(get_codes_cameo_religion)
 export(get_codes_cameo_type)
 export(get_codes_gcam)
 export(get_codes_gkg_themes)
-export(get_codes_stability_locations)
-export(get_data_ft_trending_terms)
-export(get_data_ft_v2_api)
 export(get_data_gdelt_period_event_totals)
 export(get_data_gdelt_periods_event)
 export(get_data_gkg_days_detailed)
 export(get_data_gkg_days_summary)
-export(get_data_gkg_tv_days)
-export(get_data_locations_instability_api)
-export(get_data_sentiment_ft_api_domains)
-export(get_data_sentiment_ft_api_terms)
-export(get_data_tv_summaries)
 export(get_data_vgkg_dates)
-export(get_gdelt_codebook_ft_api)
-export(get_gdelt_codebook_geo_api)
 export(get_gdelt_url_data)
 export(get_urls_gdelt_event_log)
 export(get_urls_gkg_15_minute_log)
 export(get_urls_gkg_daily_summaries)
 export(get_urls_gkg_most_recent_log)
-export(get_urls_gkg_tv_daily_summaries)
 export(get_urls_gkgtv_most_recent_log)
 export(get_urls_vgkg)
+export(gkg_tv_days)
+export(instability_api_locations)
 export(load_needed_packages)
 export(parse_gkg_mentioned_article_tone)
 export(parse_gkg_mentioned_dates)
@@ -56,6 +55,8 @@ export(parse_gkg_mentioned_quotes)
 export(parse_gkg_mentioned_social_embeds)
 export(parse_gkg_mentioned_source_data)
 export(parse_gkg_mentioned_themes)
+export(parse_v3_entity_api_urls)
+export(parse_v3_social_urls)
 export(parse_vgkg_faces)
 export(parse_vgkg_labels)
 export(parse_vgkg_landmarks)
@@ -67,12 +68,16 @@ export(parse_xml_extras)
 export(plot_hc_trelliscope)
 export(plot_trelliscopes)
 export(plot_wc_trelliscope)
+export(tv_summaries)
 export(v2_api_url_df)
+export(v3_entity_api)
+export(v3_social_data)
 export(visualize_gkg_trelliscope)
 export(visualize_gkg_tv_trelliscope)
 export(visualize_vgkg_trelliscope)
 import(anytime)
 import(curl)
+import(data.table)
 import(dplyr)
 import(ggplot2)
 import(ggthemes)
@@ -81,22 +86,25 @@ import(highcharter)
 import(httr)
 import(jsonlite)
 import(lubridate)
+import(memoise)
 import(purrr)
 import(purrrlyr)
 import(readr)
+import(readxl)
 import(rlang)
 import(rvest)
+import(stringi)
 import(stringr)
 import(tibble)
 import(tidyr)
 import(trelliscopejs)
+import(urltools)
 import(utils)
 import(wordcloud2)
 import(xml2)
 importFrom(curl,curl)
 importFrom(curl,curl_download)
 importFrom(dplyr,tibble)
-importFrom(furrr,future_map_dfr)
 importFrom(glue,glue)
 importFrom(grDevices,colors)
 importFrom(httr,url_ok)
