--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ import(jsonlite)
 import(lubridate)
 import(memoise)
 import(purrr)
+import(purrrlyr)
 import(readr)
 import(readxl)
 import(rlang)
